# simple-svg

./: CMakeLists.txt
examples/: main.cpp
src/: ssvg.cpp  ssvg_parser.cpp
